apps/team-a/my-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellosvc
  namespace: team-a-ns1
spec:
  ports:
  - name: http-helloserver
    port: 80
    targetPort: 8080
  selector:
    app: helloserver
  type: ClusterIP
