apps/team-a/my-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hellosvc
  namespace: team-a-ns1
spec:
  hosts:
  - "test.predictly.se"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: hellosvc
